--- a/LetsGoBlack/www/templates/account.html
+++ b/LetsGoBlack/www/templates/account.html
@@ -9,6 +9,12 @@
 
 	<div class="card">
 	  <div class="item item-text-wrap">
+	   	Last Name: {{ user.last_name }}
+	  </div>
+	</div>
+
+	<div class="card">
+	  <div class="item item-text-wrap">
 	   	Login: {{ user.login }}
 	  </div>
 	</div>
