--- a/LetsGoBlack/www/templates/selected-stop.html
+++ b/LetsGoBlack/www/templates/selected-stop.html
@@ -1,24 +1,24 @@
 
   <ion-view view-title="Your Stop">
-    <ion-content class="start-background">
-      <div class="padding" style="text-align: center; padding-top: 5%;">
+      <ion-content class="padding start-background">
+        <div class="list list-inset">
+          <label class="item item-input">
+            <i class="icon ion-speakerphone placeholder-icon"></i>
+            <input type="text" placeholder="Let me speak..." ng-model="data.speechText">
+          </label>
+        </div>
+        <button class="button button-full button-positive" ng-click="speakText()">
+          Speak!
+        </button>
+ 
+        <button class="button button-full button-positive"ng-click="record()">
+          Record
+        </button>
         <div class="card">
           <div class="item item-text-wrap">
-              <img class="image" style="width:80%" src="img/moad.jpg" alt="" />
-              <div class=" gray"><p>MUSEUM OF THE AFRICAN DISPORA</p></div>
-              <p><b>Description:</b></p>
-                <p>
-                    The Museum of the African Diaspora is a museum in San Francisco, California, documenting the African diaspora. MoAD showcases the history, art, and cultural richness that resulted from the migration of Africans throughout the world. 
-                </p>
-                <br>
-                <p><b>Address</b></p>
-                <p>685 Mission St, San Francisco, CA 94105</p>
-                <br>
-                <p><b>Number</b></p>
-                <p>(415) 358-7200</p>
-      
+            {{recognizedText}}
           </div>
         </div>
-      </div>
+      </ion-content>
     </ion-content>
   </ion-view>
