--- a/LetsGoBlack/www/templates/trip-setup.html
+++ b/LetsGoBlack/www/templates/trip-setup.html
@@ -11,15 +11,16 @@
                   </label>
                   <label class="item item-input">
                         <div class="input-label"><b>Max Distancs (Miles)</b></div>
-                        <input type="tel" value="20">
+                        <input type="tel" value="1">
                   </label>     
                   <label class="item item-input">
                         <div class="input-label"><b>Trip Duration (Days)</b></div>
-                        <input  type="tel" value="2">
+                        <input  type="tel" value="1">
                   </label> 
                   <label class="item item-input item-select">
                         <div class="input-label"><b>Theme</b></div>
                         <select >
+                          <option>Select Theme</option>
                             <option>Kid-Friendly</option>
                             <option selected>History</option>
                             <option>College Search</option>
