--- a/LetsGoBlack/www/css/style.css
+++ b/LetsGoBlack/www/css/style.css
@@ -48,13 +48,11 @@ float: left;
   margin-top: 10px;
 }
 
-<<<<<<< Updated upstream
 
 .header-img{
      width:100%;
      height:150px;
-}
-=======
+}]
 .center {
   margin: 0 auto;
   width: 100%;
@@ -64,7 +62,7 @@ float: left;
   visibility: hidden;
 }
 .custom-file-input::before {
-  content: 'Take photo of drivers license';
+  content: 'Take Photo of Drivers License';
   display: inline-block;
   background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
   border: 1px solid #999;
@@ -85,4 +83,29 @@ float: left;
 .custom-file-input:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
->>>>>>> Stashed changes
+
+.custom-file-input2::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input2::before {
+  content: 'Take Photo of Your Business';
+  display: inline-block;
+  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  width: cover;
+  font-size: 10pt;
+}
+.custom-file-input2:hover::before {
+  border-color: black;
+}
+.custom-file-input2:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
