--- a/LetsGoBlack/www/templates/add-business.html
+++ b/LetsGoBlack/www/templates/add-business.html
@@ -1,30 +1,63 @@
   <ion-view view-title="Add Business">
     <ion-content class="start-background">
-        <div class="padding" style="text-align: left; padding-top: 60%;">
+        <div class="padding" style="text-align: left; padding-top: 20%;">
               <div class="list list-inset">
                     <label class="item item-input">
                       <span class="input-label" >Name: </span>
                       <input type="text" name="businessname">
                     </label>
                     <label class="item item-input">
-                      <span class="input-label">Business Description: </span>
+                      <span class="input-label">Description: </span>
                       <input type="text" name="description">
                     </label>
+                    <label class="item item-input">
+                      <span class="input-label">Number: </span>
+                      <input type="number" name="number">
+                    </label>
+                    <label class="item item-input">
+                      <span class="input-label">Website: </span>
+                      <input type="number" name="website">
+                    </label>
               </div>
-              <form action="/your-server-side-code" method="POST">
+              <div class="padding" style="text-align: center; ">
+
+                <input type="file"    id="profile-img" style="text-align: center; "class="custom-file-input2"accept="image/*"  />
+                   <img src="" id="profile-img-tag" width="200px" />
+
+                  <script type="text/javascript">
+                      function readURL(input) {
+                          if (input.files && input.files[0]) {
+                              var reader = new FileReader();
+                              
+                              reader.onload = function (e) {
+                                  $('#profile-img-tag').attr('src', e.target.result);
+                              }
+                              reader.readAsDataURL(input.files[0]);
+                          }
+                      }
+                      $("#profile-img").change(function(){
+                          readURL(this);
+                      });
+                  </script>
+
+              <form action="/your-server-side-code"  style="text-align: center;  " method="POST">
                   <script
                     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                     data-key="pk_test_IpCLUHZdjnKcmeERHjueQUbh"
-                    data-amount="999"
-                    data-name="Demo Site"
-                    data-description="Widget"
+                    data-amount="1500"
+                    data-name="Add Business"
+                    data-description="Monthly Subscription"
                     data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
                     data-locale="auto">
                   </script>
                 </form>
-          <!--<button type="submit" class="button button-block button-positive">-->
-          <!--<i ng-show="loading" class="ion-loading-b"> Add Business</i>-->
-          <!--</button>-->
+                              </div>
+
+                              <div class="padding" style="text-align: center;" >
+                    <a href="#/app/trip-setup"> <button class="button  button-assertive btn">
+          Add 
+        </button> </a>
+      </div>
 
         </div>
 
